--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,70 @@
 	</header>
 	<!-- ========== END HEADER ========== -->
 
-	
+	<!-- ========== MAIN CONTENT ========== -->
+	<main id="content" class="dark:bg-neutral-800">
+		<div class="max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8">
+			<div
+				class="py-10 min-h-screen bg-white xl:border-x border-x-gray-200 dark:bg-neutral-800 dark:border-x-gray-700">
+
+				<!-- Main content here -->
+				<!-- Hero -->
+				<div class="max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8">
+					<!-- Grid -->
+					<div class="grid md:grid-cols-2 gap-4 md:gap-8 xl:gap-20 md:items-center">
+						<div>
+							<h1
+								class="block text-3xl font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight dark:text-white">
+								Start your journey with <span class="text-blue-600">Renewables</span></h1>
+							<p class="mt-3 text-lg text-gray-800 dark:text-neutral-400">Solar, wind, hydroelectric,
+								biomass, and geothermal power can provide energy without the planet-warming effects of
+								fossil fuels.</p>
+
+						</div>
+						<!-- End Col -->
+
+						<div class="relative ms-4">
+							<img class="w-full rounded-md" src="/assets/renewables/windmill-solar-clearsky.jpeg"
+								alt="Hero Image">
+							<div
+								class="absolute inset-0 -z-1 bg-linear-to-tr from-gray-200 via-white/0 to-white/0 size-full rounded-md mt-4 -mb-4 me-4 -ms-4 lg:mt-6 lg:-mb-6 lg:me-6 lg:-ms-6 dark:from-neutral-800 dark:via-neutral-900/0 dark:to-neutral-900/0">
+							</div>
+
+							<!-- SVG-->
+							<div class="absolute bottom-0 start-0">
+								<svg class="w-2/3 ms-auto h-auto text-white dark:text-neutral-900" width="630"
+									height="451" viewBox="0 0 630 451" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<rect x="531" y="352" width="99" height="99" fill="currentColor" />
+									<rect x="140" y="352" width="106" height="99" fill="currentColor" />
+									<rect x="482" y="402" width="64" height="49" fill="currentColor" />
+									<rect x="433" y="402" width="63" height="49" fill="currentColor" />
+									<rect x="384" y="352" width="49" height="50" fill="currentColor" />
+									<rect x="531" y="328" width="50" height="50" fill="currentColor" />
+									<rect x="99" y="303" width="49" height="58" fill="currentColor" />
+									<rect x="99" y="352" width="49" height="50" fill="currentColor" />
+									<rect x="99" y="392" width="49" height="59" fill="currentColor" />
+									<rect x="44" y="402" width="66" height="49" fill="currentColor" />
+									<rect x="234" y="402" width="62" height="49" fill="currentColor" />
+									<rect x="334" y="303" width="50" height="49" fill="currentColor" />
+									<rect x="581" width="49" height="49" fill="currentColor" />
+									<rect x="581" width="49" height="64" fill="currentColor" />
+									<rect x="482" y="123" width="49" height="49" fill="currentColor" />
+									<rect x="507" y="124" width="49" height="24" fill="currentColor" />
+									<rect x="531" y="49" width="99" height="99" fill="currentColor" />
+								</svg>
+							</div>
+							<!-- End SVG-->
+						</div>
+						<!-- End Col -->
+					</div>
+					<!-- End Grid -->
+				</div>
+				<!-- End Hero -->
+
+			</div>
+		</div>
+	</main>
+	<!-- ========== END MAIN CONTENT ========== -->	
 
 	<footer
 		class="border-t border-gray-200 mt-auto w-full max-w-[85rem] py-10 px-4 sm:px-6 lg:px-8 mx-auto dark:bg-neutral-800">
