Bring index.html forward

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>REimagine</title>
-	<link href="./output.css" rel="stylesheet">
+	<link href="./src/output.css" rel="stylesheet">
 </head>
 
 <body>
@@ -65,7 +65,7 @@
 						</a>
 
 						<a class="p-2 flex items-center text-sm text-gray-800 hover:text-gray-500 focus:outline-hidden focus:text-gray-500 dark:text-neutral-200 dark:hover:text-neutral-500 dark:focus:text-neutral-500"
-							href="importance.html">
+							href="./src/importance.html">
 							<svg class="shrink-0 size-4 me-3 md:me-2 block md:hidden" xmlns="http://www.w3.org/2000/svg"
 								width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
 								stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -76,7 +76,7 @@
 						</a>
 
 						<a class="p-2 flex items-center text-sm text-gray-800 hover:text-gray-500 focus:outline-hidden focus:text-gray-500 dark:text-neutral-200 dark:hover:text-neutral-500 dark:focus:text-neutral-500"
-							href="profitability.html">
+							href="./src/profitability.html">
 							<svg class="shrink-0 size-4 me-3 md:me-2 block md:hidden" xmlns="http://www.w3.org/2000/svg"
 								width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
 								stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -92,7 +92,7 @@
 						<div
 							class="relative flex flex-wrap items-center gap-x-1.5 md:ps-2.5 mt-1 md:mt-0 md:ms-1.5 before:block before:absolute before:top-1/2 before:-start-px before:w-px before:h-4 before:bg-gray-300 before:-translate-y-1/2 dark:before:bg-neutral-700">
 							<a class="p-2 w-full flex items-center text-sm text-gray-800 hover:text-gray-500 focus:outline-hidden focus:text-gray-500 dark:text-neutral-200 dark:hover:text-neutral-500 dark:focus:text-neutral-500"
-								href="404.html">
+								href="./src/404.html">
 								<svg class="shrink-0 size-4 me-3 md:me-2" xmlns="http://www.w3.org/2000/svg" width="24"
 									height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
 									stroke-linecap="round" stroke-linejoin="round">
@@ -660,15 +660,15 @@
 			</div>
 		</div>
 	</main>
-	<!-- ========== END MAIN CONTENT ========== -->	
+	<!-- ========== END MAIN CONTENT ========== -->
 
 	<footer
 		class="border-t border-gray-200 mt-auto w-full max-w-[85rem] py-10 px-4 sm:px-6 lg:px-8 mx-auto dark:bg-neutral-800">
 		<!-- Grid -->
 		<div class="grid grid-cols-1 md:grid-cols-3 items-center gap-5">
 			<div>
-				<a class="flex-none text-xl font-semibold text-black focus:outline-hidden dark:text-white" href="index.html"
-					aria-label="Brand">REimagine</a>
+				<a class="flex-none text-xl font-semibold text-black focus:outline-hidden dark:text-white"
+					href="index.html" aria-label="Brand">REimagine</a>
 			</div>
 			<!-- End Col -->
 
@@ -676,21 +676,21 @@
 				<li
 					class="inline-block relative pe-8 last:pe-0 last-of-type:before:hidden before:absolute before:top-1/2 before:end-3 before:-translate-y-1/2 before:content-['/'] before:text-gray-300 dark:before:text-neutral-600">
 					<a class="inline-flex gap-x-2 text-sm text-gray-500 hover:text-gray-800 focus:outline-hidden focus:text-gray-800 dark:text-neutral-500 dark:hover:text-neutral-200 dark:focus:text-neutral-200"
-						href="404.html">
+						href="./src/404.html">
 						About
 					</a>
 				</li>
 				<li
 					class="inline-block relative pe-8 last:pe-0 last-of-type:before:hidden before:absolute before:top-1/2 before:end-3 before:-translate-y-1/2 before:content-['/'] before:text-gray-300 dark:before:text-neutral-600">
 					<a class="inline-flex gap-x-2 text-sm text-gray-500 hover:text-gray-800 focus:outline-hidden focus:text-gray-800 dark:text-neutral-500 dark:hover:text-neutral-200 dark:focus:text-neutral-200"
-						href="404.html">
+						href="./src/404.html">
 						Services
 					</a>
 				</li>
 				<li
 					class="inline-block relative pe-8 last:pe-0 last-of-type:before:hidden before:absolute before:top-1/2 before:end-3 before:-translate-y-1/2 before:content-['/'] before:text-gray-300 dark:before:text-neutral-600">
 					<a class="inline-flex gap-x-2 text-sm text-gray-500 hover:text-gray-800 focus:outline-hidden focus:text-gray-800 dark:text-neutral-500 dark:hover:text-neutral-200 dark:focus:text-neutral-200"
-						href="404.html">
+						href="./src/404.html">
 						Blog
 					</a>
 				</li>
@@ -700,7 +700,7 @@
 			<!-- Social Brands -->
 			<div class="md:text-end space-x-2">
 				<a class="size-8 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-full border border-transparent text-gray-500 hover:bg-gray-50 focus:outline-hidden focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:text-neutral-400 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
-					href="404.html">
+					href="./src/404.html">
 					<svg class="shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
 						fill="currentColor" viewBox="0 0 16 16">
 						<path
@@ -708,7 +708,7 @@
 					</svg>
 				</a>
 				<a class="size-8 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-full border border-transparent text-gray-500 hover:bg-gray-50 focus:outline-hidden focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:text-neutral-400 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
-					href="404.html">
+					href="./src/404.html">
 					<svg class="shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
 						fill="currentColor" viewBox="0 0 16 16">
 						<path
@@ -716,7 +716,7 @@
 					</svg>
 				</a>
 				<a class="size-8 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-full border border-transparent text-gray-500 hover:bg-gray-50 focus:outline-hidden focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:text-neutral-400 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
-					href="404.html">
+					href="./src/404.html">
 					<svg class="shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
 						fill="currentColor" viewBox="0 0 16 16">
 						<path
@@ -724,7 +724,7 @@
 					</svg>
 				</a>
 				<a class="size-8 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-full border border-transparent text-gray-500 hover:bg-gray-50 focus:outline-hidden focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:text-neutral-400 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
-					href="404.html">
+					href="./src/404.html">
 					<svg class="shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
 						fill="currentColor" viewBox="0 0 16 16">
 						<path
