--- a/profitability.html
+++ b/profitability.html
@@ -17,7 +17,7 @@
             <!-- Logo w/ Collapse Button -->
             <div class="flex items-center justify-between">
                 <a class="flex-none font-semibold text-xl text-black focus:outline-hidden focus:opacity-80 dark:text-white"
-                    href="/index.html" aria-label="Brand">REimagine</a>
+                    href="index.html" aria-label="Brand">REimagine</a>
 
                 <!-- Collapse Button -->
                 <div class="md:hidden">
@@ -53,7 +53,7 @@
                     class="overflow-hidden overflow-y-auto max-h-[75vh] [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500">
                     <div class="py-2 md:py-0 flex flex-col md:flex-row md:items-center md:justify-end gap-0.5 md:gap-1">
                         <a class="p-2 flex items-center text-sm text-gray-800 hover:text-gray-500 focus:outline-hidden focus:text-gray-500 dark:text-neutral-200 dark:hover:text-neutral-500 dark:focus:text-neutral-500"
-                            href="/index.html" aria-current="page">
+                            href="index.html" aria-current="page">
                             <svg class="shrink-0 size-4 me-3 md:me-2 block md:hidden" xmlns="http://www.w3.org/2000/svg"
                                 width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -122,7 +122,7 @@
                 <!-- Hero -->
                 <div class="px-4 sm:px-6 lg:px-8 ">
                     <div
-                        class="h-120 md:h-[80dvh] flex flex-col bg-[url('/assets/renewables/wind-power-plant.jpg')] bg-cover bg-center bg-no-repeat rounded-2xl">
+                        class="h-120 md:h-[80dvh] flex flex-col bg-[url('assets/renewables/wind-power-plant.jpg')] bg-cover bg-center bg-no-repeat rounded-2xl">
                         <div class="mt-auto w-2/3 md:max-w-lg ps-5 pb-5 md:ps-10 md:pb-10">
                             <h1 class="text-xl md:text-3xl lg:text-5xl text-white">
                                 How Renewables Generates Money
@@ -191,7 +191,7 @@
 
                                     <figure>
                                         <img class="w-full object-cover rounded-xl"
-                                            src="/assets/renewables/revenue-growth.jpg" alt="Blog Image">
+                                            src="assets/renewables/revenue-growth.jpg" alt="Blog Image">
                                     </figure>
 
                                     <h3 class="text-2xl font-semibold dark:text-white">Renewable incentives</h3>
@@ -231,7 +231,7 @@
 
                                     <figure>
                                         <img class="w-full object-cover rounded-xl"
-                                            src="/assets/renewables/incentive.jpg" alt="Blog Image">
+                                            src="assets/renewables/incentive.jpg" alt="Blog Image">
                                     </figure>
 
                                     <h3 class="text-2xl font-semibold dark:text-white">A clean industry</h3>
@@ -278,7 +278,7 @@
 
                                     <figure>
                                         <img class="w-full object-cover rounded-xl"
-                                            src="/assets/renewables/green-factory.jpg" alt="Blog Image">
+                                            src="assets/renewables/green-factory.jpg" alt="Blog Image">
                                     </figure>
                                 </div>
                             </div>
@@ -346,7 +346,7 @@
         <div class="grid grid-cols-1 md:grid-cols-3 items-center gap-5">
             <div>
                 <a class="flex-none text-xl font-semibold text-black focus:outline-hidden dark:text-white"
-                    href="/index.html" aria-label="Brand">REimagine</a>
+                    href="index.html" aria-label="Brand">REimagine</a>
             </div>
             <!-- End Col -->
 
