--- a/profitability.html
+++ b/profitability.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REimagine</title>
-    <link href="output.css" rel="stylesheet">
+    <link href="src/output.css" rel="stylesheet">
 </head>
 
 <body>
@@ -122,7 +122,7 @@
                 <!-- Hero -->
                 <div class="px-4 sm:px-6 lg:px-8 ">
                     <div
-                        class="h-120 md:h-[80dvh] flex flex-col bg-[url('assets/renewables/wind-power-plant.jpg')] bg-cover bg-center bg-no-repeat rounded-2xl">
+                        class="h-120 md:h-[80dvh] flex flex-col bg-[url('/assets/renewables/wind-power-plant.jpg')] bg-cover bg-center bg-no-repeat rounded-2xl">
                         <div class="mt-auto w-2/3 md:max-w-lg ps-5 pb-5 md:ps-10 md:pb-10">
                             <h1 class="text-xl md:text-3xl lg:text-5xl text-white">
                                 How Renewables Generates Money
@@ -168,7 +168,7 @@
 
                                     <figure>
                                         <img class="w-full object-cover rounded-xl"
-                                            src="/assets/renewables/infinity.png" alt="Blog Image">
+                                            src="assets/renewables/infinity.png" alt="Blog Image">
                                     </figure>
 
                                     <h3 class="text-2xl font-semibold dark:text-white">Generate Revenue</h3>
