--- a/importance.html
+++ b/importance.html
@@ -121,8 +121,8 @@
 
                 <!-- Hero -->
                 <div class="px-4 sm:px-6 lg:px-8 ">
-                    <div
-                        class="h-120 md:h-[80dvh] flex flex-col bg-[url('/assets/renewables/wind-power-plant.jpg')] bg-cover bg-center bg-no-repeat rounded-2xl">
+                    <div style="background-image: url(assets/renewables/wind-power-plant.jpg)"
+                        class="h-120 md:h-[80dvh] flex flex-col bg-cover bg-center bg-no-repeat rounded-2xl">
                         <div class="mt-auto w-2/3 md:max-w-lg ps-5 pb-5 md:ps-10 md:pb-10">
                             <h1 class="text-xl md:text-3xl lg:text-5xl text-white">
                                 Why Renewable Energy Matters
