--- a/profitability.html
+++ b/profitability.html
@@ -11,7 +11,7 @@
 <body>
     <!-- ========== HEADER ========== -->
     <header
-        class="bg-white border-b border-gray-200 dark:bg-neutral-800 dark:border-neutral-700 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
+        class="bg-white dark:bg-neutral-800 dark:border-neutral-700 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
         <nav
             class="relative max-w-[85rem] w-full md:flex md:items-center md:justify-between md:gap-3 mx-auto px-4 sm:px-6 lg:px-8 py-2 dark:bg-neutral-900">
             <!-- Logo w/ Collapse Button -->
@@ -115,7 +115,7 @@
     <main id="content">
         <div class="max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8">
             <div
-                class="py-10 min-h-screen bg-white xl:border-x border-x-gray-200 dark:bg-neutral-800 dark:border-x-gray-700">
+                class="py-10 min-h-screen bg-white dark:bg-neutral-800 dark:border-x-gray-700">
 
                 <!-- Main content here -->
 
