--- a/profitability.html
+++ b/profitability.html
@@ -8,12 +8,12 @@
     <link href="src/output.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="dark:bg-neutral-800">
     <!-- ========== HEADER ========== -->
     <header
         class="bg-white dark:bg-neutral-800 dark:border-neutral-700 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
         <nav
-            class="relative max-w-[85rem] w-full md:flex md:items-center md:justify-between md:gap-3 mx-auto px-4 sm:px-6 lg:px-8 py-2 dark:bg-neutral-900">
+            class="relative max-w-[85rem] w-full md:flex md:items-center md:justify-between md:gap-3 mx-auto px-4 sm:px-6 lg:px-8 py-2 dark:bg-neutral-800">
             <!-- Logo w/ Collapse Button -->
             <div class="flex items-center justify-between">
                 <a class="flex-none font-semibold text-xl text-black focus:outline-hidden focus:opacity-80 dark:text-white"
